test/SILPasses/constant_propagation2.sil
// RUN: %target-swift-frontend %s -emit-sil -verify

import Builtin

// fold_sadd_with_overflow_Overflow
sil @fold_sadd_with_overflow_Overflow : $@thin (Builtin.RawPointer) -> Builtin.Int64 {
bb0(%0 : $Builtin.RawPointer):
  %2 = integer_literal $Builtin.Int64, 9223372036854775807
  %3 = integer_literal $Builtin.Int64, 9223372036854775807
  %21 = integer_literal $Builtin.Int1, 1
  %4 = builtin "sadd_with_overflow_Int64"(%2 : $Builtin.Int64, %3 : $Builtin.Int64, %21 : $Builtin.Int1) : $(Builtin.Int64, Builtin.Int1) // expected-error {{results in an overflow}}
  %8 = tuple_extract %4 : $(Builtin.Int64, Builtin.Int1), 0
  return %8 : $Builtin.Int64
}
